--- a/web2/template/login.ejs
+++ b/web2/template/login.ejs
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h2>这是新的数据<%= msg %></h2>
+    <ul>
+        <% for(i = 0; i < lists.length; i++ ) {%>
+        <li><%= lists[i].all_price %></li>
+        <%}%>
+    </ul>
     <form action="/doLogin" method="post">
         <div>
             用户名： <input type="input" name="username" />
